manifests/seafile/deploy-mariadb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: seafile
spec:
  selector:
    matchLabels:
      app: mariadb
  replicas: 1
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 200m
              memory: 400Mi
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mariadb-data
              mountPath: /var/lib/mysql
            - name: seafile-secrets
              mountPath: /var/run/secrets/seafile_password
              subPath: SEAFILE_DB_PASSWORD
      volumes:
        - name: mariadb-data
          persistentVolumeClaim:
            claimName: mariadb-data
        - name: seafile-secrets
          secret:
            secretName: seafile-secrets
