manifests/seafile/deploy-redis.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: seafile
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 200m
              memory: 256Mi
          args: ["redis-server", "/usr/local/etc/redis/redis.conf"]
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: seafile-secrets
              mountPath: /usr/local/etc/redis/redis.conf
              subPath: REDIS_CONF
      volumes:
        - name: seafile-secrets
          secret:
            secretName: seafile-secrets
